--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -132,6 +132,7 @@ table {
   font-family: "Inter";
   font-style: normal;
   font-weight: 400;
+  scroll-behavior: smooth;
 }
 .nightMode {
   background-color: #171923;
