--- a/src/components/navbar/navbar.module.css
+++ b/src/components/navbar/navbar.module.css
@@ -1,3 +1,9 @@
+.navbar {
+  position: sticky;
+  top: 0;
+  z-index: 100;
+}
+
 .full {
   background-color: #2d3748;
   height: 4rem;
@@ -19,6 +25,7 @@
   font-size: 20px;
   padding: 7px;
   font-weight: lighter;
+  cursor: pointer;
 }
 
 .leftButtons button:hover {
@@ -59,6 +66,7 @@
   font-size: 24px;
   margin-right: 3rem;
   font-weight: 900;
+  cursor: pointer;
 }
 
 .moonSun {
