--- a/src/components/projects/projects.module.css
+++ b/src/components/projects/projects.module.css
@@ -1,3 +1,12 @@
 .projectSection {
   height: 50vh;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  padding-top: 5rem;
+}
+
+.projectTitle {
+  font-size: 32px;
+  margin-bottom: 3rem;
 }
