--- a/src/components/skills/skills.module.css
+++ b/src/components/skills/skills.module.css
@@ -1,8 +1,9 @@
 .skillsSection {
-  height: 50vh;
+  height: 100vh;
   display: flex;
   align-items: center;
   flex-direction: column;
+  padding-top: 5rem;
 }
 
 .skillsHeader {
