--- a/src/components/welcome/welcome.module.css
+++ b/src/components/welcome/welcome.module.css
@@ -1,5 +1,5 @@
 .welcomeSection {
-  height: 100vh;
+  height: 85vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -60,6 +60,7 @@
   font-size: 24px;
   overflow: hidden; /* Ensures the content is not revealed until the animation */
   white-space: nowrap;
+  min-height: 2rem;
   width: 0;
   border-right: 0.15em solid orange; /* The typwriter cursor */
   white-space: nowrap; /* Keeps the content on a single line */
